[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zaero"
version = "2.0.0"
description = "Pitstop automation library"
requires-python = ">=3.10"
dependencies = [
    "paramiko==5.0.0",
    "PyYAML==6.0.1",
    "robotframework==7.3.2",
    "scp==0.15.0",
    "playwright==1.60.0",
    "pytest==8.4.1",
    "pyserial==3.5"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["zaero*"]